# ask-gemini

./: Cargo.toml  README.md
src/: args.rs  main.rs
